tests/snapshots/migration__deploy_contract_self_upgrade-4.snap
---
source: tests/migration.rs
expression: get_attestation_sponsorship_posts
---
[
  {
    "post_version": "V0",
    "id": 3,
    "author_id": "devgovgigs.near",
    "likes": [],
    "snapshot": {
      "editor_id": "devgovgigs.near",
      "timestamp": "[timestamp]",
      "labels": [],
      "post_type": "Attestation",
      "attestation_version": "V1",
      "name": "Attestation",
      "description": "Description"
    },
    "snapshot_history": []
  },
  {
    "post_version": "V0",
    "id": 4,
    "author_id": "devgovgigs.near",
    "likes": [],
    "snapshot": {
      "editor_id": "devgovgigs.near",
      "timestamp": "[timestamp]",
      "labels": [],
      "post_type": "Sponsorship",
      "sponsorship_version": "V1",
      "name": "Contributor fellowship",
      "description": "Funding approved",
      "sponsorship_token": "NEAR",
      "amount": "1000",
      "supervisor": "john.near"
    },
    "snapshot_history": []
  },
  {
    "post_version": "V0",
    "id": 5,
    "author_id": "devgovgigs.near",
    "likes": [],
    "snapshot": {
      "editor_id": "devgovgigs.near",
      "timestamp": "[timestamp]",
      "labels": [],
      "post_type": "Sponsorship",
      "sponsorship_version": "V1",
      "name": "Contributor fellowship",
      "description": "Funding approved",
      "sponsorship_token": "USD",
      "amount": "1000",
      "supervisor": "john.near"
    },
    "snapshot_history": []
  },
  {
    "post_version": "V0",
    "id": 6,
    "author_id": "devgovgigs.near",
    "likes": [],
    "snapshot": {
      "editor_id": "devgovgigs.near",
      "timestamp": "[timestamp]",
      "labels": [],
      "post_type": "Sponsorship",
      "sponsorship_version": "V1",
      "name": "Contributor fellowship",
      "description": "Funding approved",
      "sponsorship_token": {
        "NEP141": {
          "address": "usdt.tether-token.near"
        }
      },
      "amount": "1000",
      "supervisor": "john.near"
    },
    "snapshot_history": []
  }
]
