tests/snapshots/migration__deploy_contract_self_upgrade-5.snap
---
source: tests/migration.rs
expression: get_community
---
{
  "admins": [
    "devgovgigs.near"
  ],
  "handle": "gotham",
  "name": "Gotham",
  "tag": "some",
  "description": "This is a test community.",
  "logo_url": "https://ipfs.near.social/ipfs/bafkreibysr2mkwhb4j36h2t7mqwhynqdy4vzjfygfkfg65kuspd2bawauu",
  "banner_url": "https://ipfs.near.social/ipfs/bafkreic4xgorjt6ha5z4s5e3hscjqrowe5ahd7hlfc5p4hb6kdfp6prgy4",
  "bio_markdown": "This is a sample text about your community.\nYou can change it on the community configuration page.",
  "github_handle": null,
  "telegram_handle": [],
  "twitter_handle": null,
  "website_url": null,
  "github": null,
  "board": null,
  "wiki1": null,
  "wiki2": null,
  "features": {
    "telegram": true,
    "github": true,
    "board": true,
    "wiki": true
  },
  "addon_list": []
}
