tests/snapshots/migration__deploy_contract_self_upgrade-7.snap
---
source: tests/migration.rs
expression: get_sponsorship_post_with_nep141
---
{
  "post_version": "V0",
  "id": 6,
  "author_id": "devgovgigs.near",
  "likes": [],
  "snapshot": {
    "editor_id": "devgovgigs.near",
    "timestamp": "[timestamp]",
    "labels": [],
    "post_type": "Sponsorship",
    "sponsorship_version": "V1",
    "name": "Contributor fellowship",
    "description": "Funding approved",
    "sponsorship_token": {
      "NEP141": {
        "address": "usdt.tether-token.near"
      }
    },
    "amount": "1000",
    "supervisor": "john.near"
  },
  "snapshot_history": []
}
