tests/snapshots/migration__deploy_contract_self_upgrade-9.snap
---
source: tests/migration.rs
expression: get_proposal
---
{
  "proposal_version": "V0",
  "id": 0,
  "author_id": "devhub.near",
  "social_db_post_block_height": "91",
  "snapshot": {
    "editor_id": "devhub.near",
    "timestamp": "[timestamp]",
    "labels": [
      "test1",
      "test2"
    ],
    "proposal_body_version": "V0",
    "name": "another post",
    "category": "Marketing",
    "summary": "sum",
    "description": "some description",
    "linked_proposals": [
      1,
      3
    ],
    "requested_sponsorship_usd_amount": "1000000000",
    "requested_sponsorship_paid_in_currency": "USDT",
    "receiver_account": "polyprogrammist.near",
    "requested_sponsor": "neardevdao.near",
    "supervisor": "frol.near",
    "timeline": {
      "status": "PAYMENT_PROCESSING",
      "sponsor_requested_review": true,
      "reviewer_completed_attestation": false,
      "kyc_verified": false,
      "test_transaction_sent": false,
      "request_for_trustees_created": false
    }
  },
  "snapshot_history": [
    {
      "editor_id": "devhub.near",
      "timestamp": "[timestamp]",
      "labels": [
        "test2",
        "test1"
      ],
      "proposal_body_version": "V0",
      "name": "another post",
      "category": "Marketing",
      "summary": "sum",
      "description": "some description",
      "linked_proposals": [
        1,
        3
      ],
      "requested_sponsorship_usd_amount": "1000000000",
      "requested_sponsorship_paid_in_currency": "USDT",
      "receiver_account": "polyprogrammist.near",
      "requested_sponsor": "neardevdao.near",
      "supervisor": "frol.near",
      "timeline": {
        "status": "DRAFT"
      }
    }
  ]
}
