tests/snapshots/migration__deploy_contract_self_upgrade.snap
---
source: tests/migration.rs
expression: get_idea_post
---
{
  "post_version": "V0",
  "id": 0,
  "author_id": "devhub.near",
  "likes": [],
  "snapshot": {
    "editor_id": "devhub.near",
    "timestamp": "[timestamp]",
    "labels": [],
    "post_type": "Idea",
    "idea_version": "V1",
    "name": "This is a test idea.",
    "description": "This is a test description."
  },
  "snapshot_history": []
}
